<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="
            http://maven.apache.org/POM/4.0.0
            https://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>com.github.devidian</groupId>
	<artifactId>rw-plugin-oz-tools</artifactId>
	<version> 0.23.14</version>

	<name>OZTools</name>

	<!-- GitHub Packages publishing target -->
	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub Packages</name>
			<url>https://maven.pkg.github.com/Devidian/rw-plugin-oz-tools</url>
		</repository>
	</distributionManagement>

	<!-- Repositories -->
	<repositories>
		<repository>
			<id>central</id>
			<name>Maven Central Repository</name>
			<url>https://repo.maven.apache.org/maven2</url>
		</repository>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>

	<dependencies>

		<!-- dependencies for DiscordPlugin -->

		<!-- JDA without voice/native dependencies -->
		<dependency>
			<groupId>net.dv8tion</groupId>
			<artifactId>JDA</artifactId>
			<version>6.4.2</version>
			<exclusions>
				<exclusion>
					<groupId>club.minnced</groupId>
					<artifactId>opus-java</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- Keep OkHttp/JDA on one Kotlin runtime in the shared plugin classloader. -->
		<dependency>
			<groupId>org.jetbrains.kotlin</groupId>
			<artifactId>kotlin-stdlib</artifactId>
			<version>2.2.21</version>
		</dependency>

		<!-- Apache HttpClient 5 (async + multipart + reactive) -->
		<dependency>
			<groupId>org.apache.httpcomponents.client5</groupId>
			<artifactId>httpclient5</artifactId>
			<version>5.6.1</version>
		</dependency>

		<!-- JSON -->
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.14.0</version>
		</dependency>

		<dependency>
			<groupId>com.neovisionaries</groupId>
			<artifactId>nv-websocket-client</artifactId>
			<version>2.14</version>
		</dependency>

		<!-- dependencies for this plugin itself -->

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.26.0</version>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.26.0</version>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j2-impl</artifactId>
			<version>2.26.0</version>
		</dependency>

		<!-- RisingWorld API -->

		<dependency>
			<groupId>net.risingworld</groupId>
			<artifactId>PluginAPI</artifactId>
			<version>0.9.3</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>
		<sourceDirectory>src</sourceDirectory>
		<testSourceDirectory>src-test</testSourceDirectory>
		<directory>${oztools.build.directory}</directory>
		<finalName>${project.name}</finalName>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-install-plugin</artifactId>
					<version>3.1.1</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<resources>
			<resource>
				<directory>${basedir}/src/main/resources</directory>
			</resource>
			<resource>
				<targetPath>resources</targetPath>
				<directory>${basedir}/src/resources</directory>
				<includes>
					<include>*.yml</include>
				</includes>
			</resource>
		</resources>

		<plugins>
			<!-- clear tools directory -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-clean-plugin</artifactId>
				<version>3.3.2</version>
				<configuration>
					<filesets>
						<fileset>
							<directory>${project.basedir}/dist/${project.name}</directory>
							<includes>
								<include>**/*</include>
							</includes>
						</fileset>
					</filesets>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>1.3</version>
				<executions>
					<execution>
						<id>clear-packaged-runtime-libraries</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>run</goal>
						</goals>
						<configuration>
							<tasks>
								<delete dir="${project.basedir}/dist/${project.name}/lib" />
								<mkdir dir="${project.basedir}/dist/${project.name}/lib" />
							</tasks>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-install-plugin</artifactId>
				<version>3.1.1</version>
				<executions>
					<execution>
						<id>install-api-lib</id>
						<phase>validate</phase>
						<goals>
							<goal>install-file</goal>
						</goals>
						<configuration>
							<file>${project.basedir}/libs/PluginAPI.jar</file>
							<groupId>net.risingworld</groupId>
							<artifactId>PluginAPI</artifactId>
							<version>0.9.3</version>
							<packaging>jar</packaging>
						</configuration>
					</execution>
					<execution>
						<id>install-local</id>
						<phase>install</phase>
						<goals>
							<goal>install-file</goal>
						</goals>
						<configuration>
							<file>${project.build.directory}/${project.build.finalName}.jar</file>
							<groupId>${project.groupId}</groupId>
							<artifactId>${project.build.finalName}</artifactId>
							<version>${project.version}</version>
							<packaging>jar</packaging>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<release>20</release>
					<source>20</source>
					<target>20</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.6.0</version>

				<!-- Dependency copying -->
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${basedir}/dist/${project.name}/lib</outputDirectory>
							<excludeTypes>pom</excludeTypes>
							<includeScope>runtime</includeScope>
							<overWriteIfNewer>true</overWriteIfNewer>
							<!-- <excludeTransitive>true</excludeTransitive> -->
						</configuration>
					</execution>

					<!-- Copy jar to dist -->

					<execution>
						<id>copy-jar</id>
						<phase>package</phase>
						<goals>
							<goal>copy</goal>
						</goals>
						<configuration>
							<artifactItems>
								<artifactItem>
									<groupId>${project.groupId}</groupId>
									<artifactId>${project.artifactId}</artifactId>
									<version>${project.version}</version>
									<type>jar</type>
									<destFileName>${project.name}.jar</destFileName>
									<outputDirectory>${basedir}/dist/${project.name}</outputDirectory>
								</artifactItem>
							</artifactItems>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<!-- Resource copying -->
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.3.1</version>
				<executions>
					<execution>
						<id>copy-markdown</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${basedir}/dist/${project.name}</outputDirectory>
							<resources>
								<resource>
									<directory>${basedir}</directory>
									<includes>
										<include>README.md</include>
										<include>HISTORY.md</include>
									</includes>
								</resource>
							</resources>
						</configuration>
					</execution>
					<execution>
						<id>copy-settings</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${basedir}/dist/${project.name}</outputDirectory>
							<resources>
								<resource>
									<directory>${basedir}/src</directory>
									<includes>
										<include>*.json</include>
                                        <include>*.properties</include>
									</includes>
								</resource>
							</resources>
						</configuration>
					</execution>
					<!-- uncomment if /src/assets has any files -->
					<execution>
						<id>copy-assets</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${basedir}/dist/${project.name}/assets</outputDirectory>
							<resources>
								<resource>
									<directory>${basedir}/src/assets</directory>
									<includes>
										<include>*.json</include>
                                        <include>*.properties</include>
									</includes>
								</resource>
							</resources>
						</configuration>
					</execution>
					<!-- uncomment if /src/i18n has any files -->
					<execution>
						<id>copy-i18n</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${basedir}/dist/${project.name}/i18n</outputDirectory>
							<resources>
								<resource>
									<directory>${basedir}/src/i18n</directory>
									<includes>
										<include>*.*</include>
									</includes>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.6.0</version>
				<executions>
					<execution>
						<id>zip-dist-tools</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<appendAssemblyId>false</appendAssemblyId>
							<finalName>${project.name}-${project.version}</finalName>

							<!-- Important: Inline descriptor -->
							<descriptors>
								<descriptor>src/assembly/${project.artifactId}.xml</descriptor>
							</descriptors>

							<outputDirectory>${project.basedir}/dist</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<properties>
		<!-- Allows isolated development builds when a previous container build owns target/. -->
		<oztools.build.directory>target</oztools.build.directory>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>20</maven.compiler.source>
		<maven.compiler.target>20</maven.compiler.target>
	</properties>
</project>
